[metadata]
name = keras_image_classification
version = 0.0.1
author = Dat Nguyen
author_email = datn2107@gmail.com
description = Image classification using Keras 
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = classification, keras 
url = https://github.com/datn2107/clssification_by_keras_model
classifiers = 
    Programing Language :: Python :: 3 
    License :: OST Approvered :: MIT License 
    Operating System :: OS Independent

[options]
install_requires = 
    tensorflow >= 2.0
    pandas >= 1.0
python_require = >= 3.6

packages = find:
include_package_data = True