[metadata]
name = keras_image_classification
version = 0.0.1
author = Dat Nguyen
author_email = datn2107@gmail.com
description = Image classification using Keras 
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = classification, keras 
url = https://github.com/datn2107/keras_image_classification
classifiers = 
    Programing Language :: Python :: 3 
    License :: OST Approvered :: MIT License 
    Operating System :: OS Independent

[options]
python_require = >= 3.6
install_requires = 
    tensorflow >= 2.0
    pandas
    numpy
    sklearn

packages = find:
exclusive = tools
include_package_data = True